--- a/www/superciata/visualiza_mapas.html
+++ b/www/superciata/visualiza_mapas.html
@@ -184,22 +184,11 @@
   <div id="map"></div>
 
   <main>
-    <a id="linkPontos" class="card">
-      <div class="icon">📍</div>
-      <h3>Pontos Únicos - CNEFE</h3>
-      <p>Visualize os pontos únicos gerados a partir do cadastro CNEFE.</p>
-    </a>
-
-    <a id="linkQuadras" class="card">
-      <div class="icon">🧱</div>
-      <h3>Quadras - CNEFE</h3>
-      <p>Veja a espacialização das quadras criadas a partir dos logradouros.</p>
-    </a>
 
     <a id="linkFaces" class="card">
       <div class="icon">🧩</div>
-      <h3>Faces - CNEFE</h3>
-      <p>Explore as faces urbanas e suas relações espaciais.</p>
+      <h3>Objetos Geográficos CNEFE</h3>
+      <p>Ogjetos Geográficos criados a partir dos dados do CNEFE/IGBE.</p>
     </a>
   </main>
 
@@ -260,9 +249,7 @@
       }
     }
 
-    document.getElementById("linkPontos").href = gerarLink("https://superciata.smuu.com.br/vis_pontos_unicos_CNEFE.html");
-    document.getElementById("linkQuadras").href = gerarLink("https://superciata.smuu.com.br/vis_quadras_CNEFE.html");
-    document.getElementById("linkFaces").href = gerarLink("https://superciata.smuu.com.br/vis_faces_CNEFE.html");
+    document.getElementById("linkFaces").href = gerarLink("https://superciata.smuu.com.br/vis_CNEFE.html");
   </script>
 </body>
 
